front-view created

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply bg-gray-100 p-3 rounded-sm ring-gray-200 text-sm capitalize text-gray-800 focus:outline-none hover:shadow-sm;
+  }
+  .link {
+    @apply hover:underline cursor-pointer;
+  }
+}
